--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=Employee service (micro-service)
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_service_db
+spring.datasource.username=root   #add your own username
+spring.datasource.password=password #add your own password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.format_sql=true
+
+
+# Hibernate (JPA) Configuration
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+# Connection Pooling (HikariCP - Default)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=60000
