--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Employee service (micro-service)
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_service_db
-spring.datasource.username=root   #add your own username
-spring.datasource.password=password #add your own password
+spring.datasource.url=${database-url}
+spring.datasource.username=${username}
+spring.datasource.password=${password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.format_sql=true
 
